Fix too much padding on schedule view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,10 +109,6 @@ $tile-size: 15px;
   pointer-events: none;
 }
 
-.schedule-view {
-  padding-bottom: 48px;
-}
-
 $active-bullet-color: $hover-date-color;
 $inactive-bullet-color: #d3d3d3;
 
